fixed overlapping issue of other pages banner

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -41,4 +41,13 @@
   }
 }
 
-
+@media (max-width: 768px){
+  .breadcam_bg_2,
+  .breadcam_bg_3,
+  .wbreadcam_bg_2,
+  .breadcam_bg_c {
+    margin-top: 150px;
+    position: relative;
+    z-index: 1;
+  }
+}
